[NTP] Resize prepopulated page favicons if necessary

Previously, the favicons were not resized at all. Add functionality to
resize the favicons to the proper pixel width/height.

Bug: 908051
Change-Id: Ie81f1675575d5d8f66be686db2d78e40124412e8
Reviewed-on: https://chromium-review.googlesource.com/c/1357570
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613093}
Former-commit-id: 3812b6f65b2355b5241761bcb3d018a963429d67